@startuml
'https://plantuml.com/
skinparam classAttributeIconSize 0

class Article {
    - id : int
    - titre : string
    - contenu : text
    - createdAt : datetime
    - slug : string
    - publie : bool
}

class Categorie {
    - id : int
    - titre : string
    - slug : string
}

class Commentaire {
    - id : int
    - contenu : text
    - createdAt : datetime
}

class Auteur {
    - id : int
    - prenom : string
    - nom : string
    - pseudo : string
}

class Contact {
    - id : int
    - nom : string
    - prenom : string
    - email : string
    - objet : string
    - contenu : string
    - createdAt : datetime
}

Article"0..*"--"0..1"Categorie
Article"1..1"--"0..*"Commentaire
Commentaire"1..*"--"0..1"Auteur

@enduml